--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: JayMaro # the main title
 tagline: "It'll work out somehow" # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  "My Development Diary"
+  My Development Diary
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
