--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Jinkyu Kim
-  email: jinkyu0201@naver.com # change to your email address
+  name: JayMaro
+  email: marojay0201@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username # change to your Twitter homepage
